web/src/components/localization-select/localization-select.css
.localization-select {
    position: relative;
    font-family: 'Inter', sans-serif;

    &::before {
        content: '';
        width: 100%;
        height: 100%;
        position: absolute;
        background: url('./globe.svg') no-repeat;
        background-position-x: left 13px;
        background-position-y: center;
        background-size: 17px 16px;
        pointer-events: none;
        z-index: var(--top-z-index);

        [dir='rtl'] & {
            background-position-x: right 13px;
        }
    }

    &.with-down-arrow::after {
        top: 0;
    }

    & select,
    & .button {
        border: 1.6px solid #e6e4e1;
        border-radius: 2px;
        padding-inline-start: 2.5rem;
        background: white;
        text-transform: uppercase;
        font-size: var(--font-size-xs);
        font-weight: 600;
        letter-spacing: 0.8px;
        color: var(--warm-grey);
        cursor: pointer;
    }

    & .button {
        width: auto;
        display: flex;
        align-items: center;
        justify-content: left;
        padding: 0.8px 40px;
        min-width: 120px;
        height: var(--input-height);
        box-sizing: border-box;
        min-width: auto;
    }

    & .list-wrapper {
        display: none;
        height: 100%;
        filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.15));

        & .triangle {
            position: absolute;
            bottom: -10px;
            right: 13px;
            border-left: 8px solid transparent;
            border-right: 8px solid transparent;
            border-bottom: 10px solid var(--white);

            [dir='rtl'] & {
                right: auto;
                left: 13px;
            }
        }

        & ul {
            position: absolute;
            right: 0;
            list-style: none;
            margin: 0;
            padding: 0;
            margin-top: 10px;
            max-height: 16rem;
            overflow-y: auto;
            background: var(--white);
            color: var(--near-black);

            [dir='rtl'] & {
                right: auto;
                left: 0;
            }

            & li {
                border-bottom: 1px solid var(--light-grey);
                padding: 0.85em 1em;
                font-size: 0.85em;
                text-overflow: ellipsis;
                overflow-x: hidden;
                text-transform: uppercase;
                cursor: pointer;

                &.selected {
                    font-weight: 600;
                }

                &.highlighted {
                    background: var(--light-grey);
                }
            }
        }
    }
}

.localization-select--open {
    & .list-wrapper {
        display: block;
    }
}

.localization-select--open,
.localization-select:hover,
.localization-select.focus-visible:focus-within {
    &::before {
        background-image: url('./globe_black.svg');
    }

    & select,
    & .button {
        border-color: var(--black);
        color: var(--black);
        background: var(--lighter-grey);
    }
}

